--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,8 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # Temporary workaround
-      - name: Checkout submodules
+      - name: Checkout miniquad fork
         working-directory: ${{runner.workspace}}
         run: |
           git clone --branch expose-internal-data-path-release https://github.com/kraxarn/miniquad.git miniquad-android
@@ -30,4 +29,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: android
-          path: ${{runner.workspace}}/mcg/target/android-artifacts/release/apk/mase.apk
+          path: ${{runner.workspace}}/miniquad-android-storage-example/target/android-artifacts/release/apk/mase.apk
